trail api stopped working or hit limit had to add additional data api. New api is sunlight congress. App working on ios device

--- a/project1/platforms/ios/www/css/main.css
+++ b/project1/platforms/ios/www/css/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 body {
-  color: #000;
+  color: #fff;
   /* text-align: center; */
   /* text-shadow: 0 1px 3px rgba(0,0,0,.5);
   box-shadow: inset 0 0 100px rgba(0,0,0,.5); */
@@ -18,7 +18,6 @@ body {
 /*
  * Dashboard Images
  */
-
 .dashimage {
   margin-bottom: 30px;
   text-align: center;
